docs(scaling): updated intro

--- a/pages/writing/scaling_support.mdx
+++ b/pages/writing/scaling_support.mdx
@@ -209,11 +209,12 @@ const triggerEmergency = (props) => {
       </Box>
     </Heading>
     <Paragraph>
-      Here's a situation you'll probably encounter while building a platform
-      where there was none before: you begin your journey by doing things that
-      don't scale. And that works, till a certain inflection point, when a
-      change becomes necessary. This change might be technical or procedural,
-      but is almost always <strong>also</strong> cultural. We saw this as our{" "}
+      While building platforms for the first time, your team and their customers
+      go through a multitude of changes. Customers learn new ways to work and
+      give up their own ways of working. And while most of these can be
+      positive, inertia and muscle memory pose challenges that might be
+      technical or operational, but almost always <strong>also</strong>{" "}
+      cultural. We saw this as our{" "}
       <Link href="//paste.twilio.design/" passHref>
         <Anchor>design system</Anchor>
       </Link>{" "}
@@ -771,26 +772,36 @@ const triggerEmergency = (props) => {
 <Grid gutter="space40">
   <Column span={4} offset={1}>
     <Heading as="h2" variant="heading20">
-    Closing thoughts
+      Closing thoughts
     </Heading>
     <Paragraph>
-      Unsurprisingly, support is hard and there's no single or linear way to solve for it. <Link href="//www.jennieyip.design/" passHref>
-        <Anchor>
-          Jennie Yip
-        </Anchor>
-      </Link> nailed it when she said:
+      Unsurprisingly, support is hard and there's no single or linear way to
+      solve for it.{" "}
+      <Link href="//www.jennieyip.design/" passHref>
+        <Anchor>Jennie Yip</Anchor>
+      </Link>{" "}
+      nailed it when she said:
     </Paragraph>
-    <Box 
-      as="blockquote" 
-      paddingLeft="space40"
-    >
-    <Text fontStyle="italic">
-      "We don’t often talk about how much we get beat up being on a #designsystems team. The leads have to be strong + resilient to protect the focus of our team and for the system to be successful. I am deeply grateful to my passionate and empathetic team. But damn, some days are hard."
-    </Text>{" "}
-    <Link href="//twitter.com/jenniesyip/status/1278380817090150405" passHref><Anchor>(Source)</Anchor></Link>
+    <Box as="blockquote" paddingLeft="space40">
+      <Text fontStyle="italic">
+        "We don’t often talk about how much we get beat up being on a
+        #designsystems team. The leads have to be strong + resilient to protect
+        the focus of our team and for the system to be successful. I am deeply
+        grateful to my passionate and empathetic team. But damn, some days are
+        hard."
+      </Text>{" "}
+      <Link href="//twitter.com/jenniesyip/status/1278380817090150405" passHref>
+        <Anchor>(Source)</Anchor>
+      </Link>
     </Box>
     <Paragraph>
-      The UX and UI that we ship is dynamic and changes with time. So should our support models. Healthy design systems respond to the world around them - wether it's making space to switch off when sheltered in place, time off for direct or political action, or surging for important deadlines like launches. In each of these cultural situations, consider the success of your support to not be about the answer itself, but the process in which your customer gets there, and how your team feels about it.
+      The UX and UI that we ship is dynamic and changes with time. So should our
+      support models. Healthy design systems respond to the world around them -
+      wether it's making space to switch off when sheltered in place, time off
+      for direct or political action, or surging for important deadlines like
+      launches. In each of these cultural situations, consider the success of
+      your support to not be about the answer itself, but the process in which
+      your customer gets there, and how your team feels about it.
     </Paragraph>
   </Column>
 </Grid>
