--- a/pages/writing/scaling_support.mdx
+++ b/pages/writing/scaling_support.mdx
@@ -1,5 +1,5 @@
 ---
-title: Scaling design system support
+title: Growing Pains and How We Scaled our Design System Support
 date: "2020-06-25"
 ---
 
@@ -203,9 +203,9 @@ const triggerEmergency = (props) => {
       </Stack>
     </Box>
     <Heading as="h1" variant="heading10">
-      Scaling design system{" "}
+      Growing Pains: How We{" "}
       <Box as="span" backgroundColor="colorBackgroundBrandHighlight">
-        support
+        Scaled Our Design System Support
       </Box>
     </Heading>
     <Paragraph>
