docs(scaling): sali's nits
Co-authored-by: Sarah <li.sarah.y@gmail.com>

--- a/pages/writing/scaling_support.mdx
+++ b/pages/writing/scaling_support.mdx
@@ -316,7 +316,7 @@ const triggerEmergency = (props) => {
       Fast forward about a year, and Paste was at the foot of a steep adoption
       curve. Unlike our legacy libraries (which had larger, more complex
       monolithic components), we had moved to an approach of small, accessible,
-      and composable pieces that could be mixed and matched. As designers and
+      and composable pieces that could be mixed and matched. Designers and
       engineers were beginning to use the system as a baseline for their UIs. In
       doing so, there was a lot of relearning and undoing of old habits. We
       started getting increasingly complex questions around accessibility,
@@ -340,7 +340,7 @@ const triggerEmergency = (props) => {
       <ListItem>
         The quality of incoming requests was affected by the medium: “My build
         broke can you help?” instead of “My build (screenshot attached) failed,
-        I am currently doing _x_, and tried to do _y_”
+        I am currently doing <em>x</em>, and tried to do <em>y</em>”
       </ListItem>
     </UnorderedList>
     <Paragraph>
@@ -796,8 +796,8 @@ const triggerEmergency = (props) => {
     </Box>
     <Paragraph>
       The UX and UI that we ship is dynamic and changes with time. So should our
-      support models. Healthy design systems respond to the world around them -
-      wether it's making space to switch off when sheltered in place, time off
+      support models. Healthy design systems respond to the world around them—
+      whether it's making space to switch off when sheltered in place, time off
       for direct or political action, or surging for important deadlines like
       launches. In each of these cultural situations, consider the success of
       your support to not be about the answer itself, but the process in which
