docs(scaling): added footer credits

--- a/pages/writing/scaling_support.mdx
+++ b/pages/writing/scaling_support.mdx
@@ -803,6 +803,27 @@ const triggerEmergency = (props) => {
       your support to not be about the answer itself, but the process in which
       your customer gets there, and how your team feels about it.
     </Paragraph>
+    <Box
+    as="section"
+    >
+      <Separator orientation="horizontal" verticalSpacing="space50" />
+      <Text as="p"
+      fontSize="fontSize20">
+        Many thanks to <Link href="//www.jennieyip.design/" passHref>
+          <Anchor showExternal>
+            Jennie Yip
+          </Anchor>
+        </Link>, <Link href="//heysarah.li/" passHref>
+          <Anchor showExternal>
+            Sarah Li
+          </Anchor>
+        </Link>, and <Link href="//chexee.me/" passHref>
+          <Anchor showExternal>
+            Chelsea Otakan
+          </Anchor>
+        </Link> for guidance and edits on this article. If you see a typo or an error, please drop a line here.
+      </Text>
+    </Box>
   </Column>
 </Grid>
 <SiteFooter />
